turmites.lessons.turmites.langtoncolors.LangtonColors.scala.error
LangtonsAnt:18: error: type mismatch;
 found   : Unit
 required: Int
var l:Int=value()
               ^